<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.coxassginment.presentation.ui.UserDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/white"
        tools:context=".UserDetailsFragment">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_margin="@dimen/_5sdp"
            app:imageUrl="@{viewModel.users.avatar_url}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/llUserName"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/llNodeId"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/name"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@{viewModel.users.login}"

                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llNodeId"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/llGravterId"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llUserName"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/node_id"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@{viewModel.users.node_id}"

                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llGravterId"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/llUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llNodeId"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/graveter_id"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@{viewModel.users.gravatar_id}"

                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llUrl"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/llHtmlUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/llGravterId"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/url"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:text="@{viewModel.users.url}"

                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"/>

        </LinearLayout> <LinearLayout
            android:id="@+id/llHtmlUrl"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/llFollowerUrl"
            app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llUrl"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/html_url"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:text="@{viewModel.users.html_url}"

                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llFollowerUrl"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llHtmlUrl"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/followers_url"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:text="@{viewModel.users.followers_url}"

                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>